--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,13 @@
 # aims output
 *.out
 
-# Compiled python files:
-*.pyc
-
 # testcase folder
 testcases/
 data/*
 
 # Files derived from templates:
 *.conf
+
+# Python
+*.ipynb_checkpoints
+*.pyc
