examples | k_points and k_pointdensity examples

--- a/.gitignore
+++ b/.gitignore
@@ -25,10 +25,13 @@ data/*
 # ASE
 *parameters.ase
 
-*.mod                                                                                          
-*.o                                                                                            
-*.so  
+*.mod
+*.o
+*.so
 
 # build stuff
 build
 lib
+bin
+dist
+*.egg-info
