--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ python_3_tests:
   image: python:3
   script:
     # manually install extra deps
+    - apt-get install -yp gfortran
     - pip install numpy scipy matplotlib
     - pip install ase phonopy spglib
     - pip install .
