--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ python_3_tests:
   image: python:3
   script:
     # manually install extra deps
-    - apt-get install -yp gfortran
+    - apt-get install -yq gfortran
     - pip install numpy scipy matplotlib
     - pip install ase phonopy spglib
     - pip install .
