--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,12 @@
-python_3_tests:
+tests:
   image: python:3
   script:
     # manually install extra deps
     - apt-get update
     - apt-get install -yq gfortran
     - pip install numpy scipy matplotlib jupyter
-    - pip install ase phonopy spglib
+    - pip install phonopy spglib
+    - pip install https://gitlab.com/ase/ase/-/archive/master/ase-master.tar.gz
     - pip install .
     - python --version
     - cd $CI_PROJECT_DIR/examples/phonons
