--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 image: python:3.7
 # image: continuumio/miniconda3:latest
-# 
+#
 # before_script:
 #   - conda env create -f environment.yml
 #   - source activate hilde
@@ -10,10 +10,7 @@ tests:
     # manually install extra deps
     - apt-get update
     - apt-get install -yq gfortran
-    - apt-get install -yq liblapack-dev liblapacke-dev
-    - pip install numpy scipy matplotlib jupyter h5py
-    - pip install spglib phonopy phono3py
-    - pip install https://gitlab.com/ase/ase/-/archive/master/ase-master.tar.gz
+    - pip install -r requirements.txt
     - pip install .
     - python --version
     - jtest="jupyter nbconvert --to notebook --execute --ExecutePreprocessor.kernel_name=python3 --output output.ipynb"
