minor fixes to dockerfile and aims template, hiphive added

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ matplotlib
 jupyter
 h5py
 spglib
+https://gitlab.com/ase/ase/-/archive/master/ase-master.tar.gz  
 phonopy
 phono3py
+hiphive
 fireworks
-https://gitlab.com/ase/ase/-/archive/master/ase-master.tar.gz  
