--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,3 +10,4 @@ tests:
     - $jtest $CI_PROJECT_DIR/examples/phonons/phonopy.ipynb
     - $jtest $CI_PROJECT_DIR/examples/phono3py/phono3py.ipynb
     - python $CI_PROJECT_DIR/examples/fireworks/fireworks_example.py
+    - python $CI_PROJECT_DIR/examples/hiphive/hiphive_al.py
