--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ all_tests:
     - jtest="jupyter nbconvert --execute"
     - $jtest $CI_PROJECT_DIR/examples/phonons/phonopy.ipynb
     - $jtest $CI_PROJECT_DIR/examples/phono3py/phono3py.ipynb
-    - python $CI_PROJECT_DIR/examples/fireworks/fireworks_example.py
+      #    - python $CI_PROJECT_DIR/examples/fireworks/fireworks_example.py
     - python $CI_PROJECT_DIR/examples/hiphive/hiphive_al.py
     - python $CI_PROJECT_DIR/examples/phonon_db/phonon_db.py
     - python $CI_PROJECT_DIR/examples/phonon_db/phonon_db.py
