--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,18 +3,18 @@ image: registry.gitlab.com/flokno/hilde:latest
 before_script:
   - pip install .
   - service mongodb start --ipv6
+  - jtest="jupyter nbconvert --execute"
 
 all_tests:
   script:
-    - jtest="jupyter nbconvert --execute"
     - $jtest $CI_PROJECT_DIR/examples/phonons/phonopy.ipynb
     - $jtest $CI_PROJECT_DIR/examples/phono3py/phono3py.ipynb
       #    - python $CI_PROJECT_DIR/examples/fireworks/fireworks_example.py
     - python $CI_PROJECT_DIR/examples/hiphive/hiphive_al.py
     - python $CI_PROJECT_DIR/examples/phonon_db/phonon_db.py
     - python $CI_PROJECT_DIR/examples/phonon_db/phonon_db.py
+    - $jtest $CI_PROJECT_DIR/examples/md/md.ipynb
 
 # devel:
 #   script:
-#     - echo "These are for developing:"
-#   
+
