--- a/hilde.cfg.template
+++ b/hilde.cfg.template
@@ -9,23 +9,11 @@ home_dir = /some/path/to/hilde
 [machine]
  aimsbin:          /some/path/to/FHIaims/bin/aims.x
  basissetloc:      /some/path/to/FHIaims/aimsfiles/species_defaults
- aflowbin:         /some/path/to/bin/aflow
- pythonbin:        python3.6
- machine:          local
+ pythonbin:        python3.7
  mpi_command:      orterun -n
- queue:            express
- omp_queue:        short
- multiproc:        1
- nodes:            4
+ nodes:            4 # or cpus
  aims_command:     ${mpi_command} ${nodes} ${aimsbin}
- email :           None
 
 [database]
  location:     ${common:home_dir}/examples/phonon_db
  name:         test.db
-
-# Default structure
-[structure]
- geometry = ${common:home_dir}/hilde/test/geometry.in
- symprec: 1e-5
- use_conventional: False
