--- a/hilde.cfg.template
+++ b/hilde.cfg.template
@@ -1,4 +1,4 @@
-# Task Settings:
+# Task Settings
 [DEFAULT]
 
 # System specific stuff
@@ -7,13 +7,34 @@ verbose = True
 home_dir = /some/path/to/hilde
 
 [machine]
- aimsbin:          /some/path/to/FHIaims/bin/aims.x
- basissetloc:      /some/path/to/FHIaims/aimsfiles/species_defaults
- pythonbin:        python3.7
- mpi_command:      orterun -n
- nodes:            4 # or cpus
- aims_command:     ${mpi_command} ${nodes} ${aimsbin}
+ aimsbin =          /some/path/to/FHIaims/bin/aims.x
+ basissetloc =      /some/path/to/FHIaims/aimsfiles/species_defaults
+ pythonbin =        python3.7
+ mpi_command =      orterun
+ aims_command =     ${mpi_command} ${aimsbin}
+ outfilename =      aims.out
 
 [database]
- location:     ${common:home_dir}/examples/phonon_db
- name:         test.db
+ location =      ${common:home_dir}/examples/phonon_db
+ name =          test.db
+ 
+# information to build a default control.in
+[basisset]
+type = light
+
+[control]
+xc =             pw-lda
+relativistic =   atomic_zora scalar
+k_grid =         [2, 2, 2]
+output_level =   MD_light
+
+# this if for ase, no need to adjust
+[ase_settings]
+# for the control.in
+xc =           ${control:xc}
+relativistic = ${control:relativistic}
+k_grid =       ${control:k_grid}
+output_level = ${control:output_level}
+# to run the job
+aims_command = ${machine:aims_command}
+species_dir =  ${machine:basissetloc}/${basisset:type}
