hash, json | split hash.py in atoms2json.py and hash.py
* atoms2json is also useful outside of hashing
* behavior has been adapted
* old file removed

--- a/hilde.cfg.template
+++ b/hilde.cfg.template
@@ -38,3 +38,8 @@ output_level = ${control:output_level}
 # to run the job
 aims_command = ${machine:aims_command}
 species_dir =  ${machine:basissetloc}/${basisset:type}
+
+[ignore_params]
+output_level = False
+aims_command = False
+use_pimd_wrapper = False
