--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,10 +2,11 @@ image: registry.gitlab.com/flokno/hilde:latest
 
 before_script:
   - pip install .
-  - service mongodb start --ipv6
   - jtest="jupyter nbconvert --execute"
 
 all_tests:
+  before_script:
+    - service mongodb start --ipv6
   script:
     - python $CI_PROJECT_DIR/tests/run_md.py
     - $jtest $CI_PROJECT_DIR/examples/phonons/phonopy.ipynb
@@ -16,6 +17,7 @@ all_tests:
     - $jtest $CI_PROJECT_DIR/examples/md/md.ipynb
     - python $CI_PROJECT_DIR/tests/fireworks_test.py
     - python $CI_PROJECT_DIR/tests/hashes/hashes.py
+    - $jtest $CI_PROJECT_DIR/examples/trajectory/pretty_json.ipynb
 
 # devel:
 #   script:
