!!! [hash_ignore] in config file can be used as hash_ignore list when hashing
* tests/hashes adjusted

--- a/hilde.cfg.template
+++ b/hilde.cfg.template
@@ -65,7 +65,7 @@ walltime = 1800
 
 
 ##############################################################################
-[ignore_params]
+[hash_ignore]
 output_level = True
 aims_command = True
 use_pimd_wrapper = True
