relaxation example | add example outputs, use simpler system for showing

--- a/examples/relaxation/hilde.cfg
+++ b/examples/relaxation/hilde.cfg
@@ -3,8 +3,7 @@
 xc =                        pbesol
 relativistic =              atomic_zora scalar
 k_grid =                    [2, 2, 2]
-vdw_correction_hirshfeld =  True
-# ,sc_accuracy_rho =           1e-5
+vdw_correction_hirshfeld =  False
 output_level =              MD_light
 compute_forces =            False
 compute_analytical_stress = False
