--- a/examples/relaxation/relax.cfg
+++ b/examples/relaxation/relax.cfg
@@ -1,15 +1,16 @@
 # information to build a default control.in
 [control]
-sc_accuracy_rho = 1e-4
+sc_accuracy_rho = 1e-6
 compute_forces =  True
 
 [control_kpt]
-density =         .5
+density =         2
 
 [relaxation]
-fmax =     0.01
-maxstep =  0.2
-maxsteps = 20
+fmax =       0.005
+linesearch = False
+maxstep =    0.2
+maxsteps =   20
 
-workdir =    relax2
+workdir =    test_run
 trajectory = ${workdir}/trajectory.yaml
