a generalized ase PyTask and FW capable serial workflows for relaxations/phonopy. Still need to make the parallelized phonopy one and a connecting workflow

--- a/examples/phonons/phonopy.cfg
+++ b/examples/phonons/phonopy.cfg
@@ -3,7 +3,7 @@
 sc_accuracy_rho = 1e-6
 charge_mix_param = 0.5
 compute_forces =  True
-
+compute_analytical_stress = True
 [control_kpt]
 density =         .5
 
@@ -12,3 +12,9 @@ supercell_matrix = [-1, 1, 1, 1, -1, 1, 1, 1, -1]
 
 workdir =    test_run
 trajectory = ${workdir}/trajectory.yaml
+
+[fw_phonon]
+use_fw = True
+fw_name = relaxation_test
+fw_spec = null
+out_spec = "relaxed_atoms"
