--- a/examples/relaxation/relax.cfg
+++ b/examples/relaxation/relax.cfg
@@ -10,7 +10,12 @@ density =         2
 fmax =       0.005
 linesearch = False
 maxstep =    0.2
-maxsteps =   20
-
+maxsteps =   2
 workdir =    test_run
 trajectory = ${workdir}/trajectory.yaml
+
+[fw_relax]
+use_fw = False
+fw_name = relaxation_test
+fw_spec = null
+out_spec = "relaxed_atoms"
