--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ before_script:
 all_tests:
   script:
     - python $CI_PROJECT_DIR/tests/hashes/hashes.py
+    - cd $CI_PROJECT_DIR/tests/phonopy; python phonons.py; cd ../..
     - python $CI_PROJECT_DIR/tests/run_md.py
     - $jtest $CI_PROJECT_DIR/examples/trajectory/pretty_json.ipynb
     - $jtest $CI_PROJECT_DIR/examples/trajectory/read_trajectory.ipynb
@@ -21,4 +22,5 @@ all_tests:
 
 # devel:
 #   script:
+
 
