--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,15 +14,15 @@ all_tests:
     - $jtest $CI_PROJECT_DIR/examples/trajectory/read_trajectory.ipynb
     - $jtest $CI_PROJECT_DIR/examples/phonons/phonopy.ipynb
     - $jtest $CI_PROJECT_DIR/examples/phono3py/phono3py.ipynb
-    - python $CI_PROJECT_DIR/examples/hiphive/hiphive_al.py
+#    - python $CI_PROJECT_DIR/examples/hiphive/hiphive_al.py
     - python $CI_PROJECT_DIR/examples/phonon_db/phonon_db.py
     - python $CI_PROJECT_DIR/examples/phonon_db/phonon_db.py
     - $jtest $CI_PROJECT_DIR/examples/md/md.ipynb
     - python $CI_PROJECT_DIR/tests/fireworks_test.py
-
-devel:
-  script:
     - python $CI_PROJECT_DIR/examples/material_fingerprints/material_fingerprints.py
+
+# devel:
+#   script:
 
 
 
