update tests and config files

--- a/examples/k_grid/hilde.cfg
+++ b/examples/k_grid/hilde.cfg
@@ -18,7 +18,7 @@ home_dir = /home/knoop/local/hilde
  multiproc:        1
  nodes:            4
  aims_command:     ${mpi_command} ${nodes} ${aimsbin}
- email :           None
+ email :           null
 
 [database]
  location:     ${common:home_dir}/hilde/db
