--- a/tests/phonopy/phonopy.cfg
+++ b/tests/phonopy/phonopy.cfg
@@ -4,3 +4,5 @@ supercell_matrix = [-1, 1, 1, 1, -1, 1, 1, 1, -1]
 
 workdir =    test_run
 trajectory = ${workdir}/trajectory.yaml
+
+bandstructure_file = null
