generalized examples into workflow generator functions. To aid this I made an update_phonon_db function and modified phonopy workflow postprocess to add the material to the database

--- a/examples/workflow_examples/relaxation_phonopy_combined/workflow.cfg
+++ b/examples/workflow_examples/relaxation_phonopy_combined/workflow.cfg
@@ -1,33 +1,4 @@
 # information to build a default control.in
-[relaxation]
-fmax =       0.005
-linesearch = False
-maxstep =    0.2
-maxsteps =   20
-
-workdir =    test_run/relax
-trajectory = ${workdir}/trajectory.yaml
-
-[relaxation_control]
-compute_analytical_stress = False
-sc_accuracy_rho = 1e-6
-compute_forces =  True
-
-[relaxation_control_kpt]
-density =         2
-
-# config file to control phonopy workflow
-[phonopy]
-supercell_matrix = [-1, 1, 1, 1, -1, 1, 1, 1, -1]
-
-workdir =    test_run/phonons
-trajectory = ${workdir}/trajectory.yaml
-
-[phonopy_control]
-compute_analytical_stress = True
-sc_accuracy_rho = 1e-6
-charge_mix_param = 0.5
-compute_forces =  True
-
-[phonopy_control_kpt]
-density =         .5
+[workflow]
+step_files = light_relax.cfg,tight_relax.cfg,phonons.cfg
+fw = True
