workflow generator fixes for new scheme

--- a/examples/relaxation/fireworks.cfg
+++ b/examples/relaxation/fireworks.cfg
@@ -1,4 +1,5 @@
 [fw_relax]
 fw_name = relaxation_test
 fw_spec = null
-out_spec = "relaxed_atoms"
+out_spec_atoms = relaxed_atoms
+out_spec_calc = relaxed_calc
