--- a/examples/workflow_examples/relaxation_phonopy_combined/phonons.cfg
+++ b/examples/workflow_examples/relaxation_phonopy_combined/phonons.cfg
@@ -21,9 +21,9 @@ type = light
 db_path = /home/purcell/git/hilde/examples/workflow_examples/test.json
 
 [fw]
-serial = True
-init_in_spec_atoms = tight_relaxed_atoms
-init_in_spec_calc = tight_relaxed_calc
+serial = False
+in_spec_atoms = tight_relaxed_atoms
+in_spec_calc = tight_relaxed_calc
 from_db = True
 fw_name = phonopy_test
 fw_spec = null
