compute MD in dedicated calculation folder (like phonopy, relaxation already)

--- a/tests/md/md.cfg
+++ b/tests/md/md.cfg
@@ -6,7 +6,7 @@ maxsteps =    50
 walltime =    1
 
 workdir =    test_run
-trajectory = trajectory.yaml
-logfile =    md.log
+trajectory = ${workdir}/trajectory.yaml
+logfile =    ${workdir}/md.log
 
 restart_cmd = python run_md.py
