phonopy | simple restarts!

--- a/tests/phonopy/phonopy.cfg
+++ b/tests/phonopy/phonopy.cfg
@@ -1,8 +1,12 @@
 # config file to control phonopy workflow
 [phonopy]
-supercell_matrix = [-1, 1, 1, 1, -1, 1, 1, 1, -1]
+supercell_matrix = [1, 1, 2]
 
 workdir =    test_run
 trajectory = ${workdir}/trajectory.yaml
 
 bandstructure_file = null
+
+walltime =    1
+
+restart_cmd = python phonons.py
