naming | restart_cmd -> restart_command

--- a/examples/md/md.cfg
+++ b/examples/md/md.cfg
@@ -18,4 +18,4 @@ workdir =    test_run
 trajectory = trajectory.yaml
 logfile =    md.log
 
-restart_cmd = python run_md.py
+restart_command = python run_md.py
