--- a/tests/md/md.cfg
+++ b/tests/md/md.cfg
@@ -9,4 +9,4 @@ workdir =    test_run
 trajectory = ${workdir}/trajectory.yaml
 logfile =    ${workdir}/md.log
 
-restart_cmd = python run_md.py
+restart_command = python run_md.py
