--- a/examples/k_grid/hilde.cfg
+++ b/examples/k_grid/hilde.cfg
@@ -1,91 +1,21 @@
-# Task Settings:
-[DEFAULT]
+# information to build a default control.in
+[control]
+xc =                        pbesol
+relativistic =              atomic_zora scalar
+k_grid =                    [2, 2, 2]
+vdw_correction_hirshfeld =  False
+output_level =              MD_light
 
-# System specific stuff
-[common]
-verbose = True
-home_dir = /home/knoop/local/hilde
+[basisset]
+type = light
+
+[socketio]
+port = null
 
 [machine]
- aimsbin:          /home/knoop/FHIaims/bin/aims.ipi.mpi.x
- basissetloc:      /home/knoop/FHIaims/aimsfiles/species_defaults
- aflowbin:         /home/knoop/local/bin/aflow
- pythonbin:        python3.6
- machine:          local
- mpi_command:      orterun -n
- queue:            express
- omp_queue:        short
- multiproc:        1
- nodes:            4
- aims_command:     ${mpi_command} ${nodes} ${aimsbin}
- email :           null
-
-[database]
- location:     ${common:home_dir}/hilde/db
- name:         test.db
- 
-# Default structure
-[structure]
-geometry = ${common:home_dir}/hilde/test/geometry.in
-symprec: 1e-5
-use_conventional: False
-
-### Finally: Physics
-# DFT settings that are common to all tasks in a study
-# contains the information necessary to perform aims calculation
-# other than structure
-[dft]
-xc:            pw-lda
-relativistic:  atomic_zora scalar
-basisset:      light
-basissetloc:   ${machine:basissetloc}
-tiers:         1
-output_level:  MD_light
-nonperiodic:   False
-aimsbin:       ${machine:aimsbin}
-
-# These are more like defaults
-k_grid:        [4, 4, 4]
-k_offset:      0
-use_spg_kgrid: False
-conv_etol:     0.1
-symprec:       ${structure:symprec}
-
-# accuracy
-sc_accuracy_etot:        1e-6
-sc_accuracy_rho:         1e-6
-sc_accuracy_forces:      1e-4
-sc_accuracy_stress:      1e-3
-sc_accuracy_forces_relax: 1e-3
-iter_limit:              100
-
-# Lattice Dynamics
-[supercell]
-deviate_fill:  0.2
-deviate_N:     0.2
-N_target:      100
-
-[fc2]
-supercell:     [-2, 2, 2,  2, -2, 2,  2, 2, -2]
-k_grid:        [2, 2, 2]
-finite_disp:   0.01
-sc_natoms:     100
-q_mesh:        [5, 5, 5]
-sc_accuracy_forces: 1e-4
-n_nodes:       3
-queue:         express
-task_detail: FC2
-
-[fc3]
-supercell:           [-1, 1, 1,  1, -1, 1,  1, 1, -1]
-k_grid:              [4, 4, 4]
-cutoff:              1.5
-q_mesh:              [15, 15, 15]
-finite_disp:         0.03
-kappa_isotope:       False
-sc_accuracy_forces:  1e-5
-symmetrize_fc:       False
-task_detail:         FC3
-
-# some user settings?
-[user]
+ aimsbin =          /home/purcell/git/fhiaims/bin/aims.180824.scalapack.mpi.x
+ basissetloc =      /home/purcell/software/FHI_AIMS/fhi-aims.171221/species_defaults
+ pythonbin =        python3.6
+ mpi_command =      mpiexec -n 4
+ aims_command =     ${mpi_command} ${aimsbin}
+ outfilename =      aims.out
