[RESTARTS] don't direclty restart phonopy calculation, only return info if it should be done
further:
* don't always print bandstructure, makes problem on the cluster and the bandplot
  script can be used to do it easily

--- a/examples/phonons/phonopy.cfg
+++ b/examples/phonons/phonopy.cfg
@@ -1,6 +1,6 @@
 # config file to control phonopy workflow
 [control]
-sc_accuracy_rho = 1e-6
+sc_accuracy_rho = 1e-4
 charge_mix_param = 0.5
 compute_forces =  True
 [control_kpt]
@@ -9,5 +9,4 @@ density =         .5
 [phonopy]
 supercell_matrix = [-1, 1, 1, 1, -1, 1, 1, 1, -1]
 
-workdir =    test_run
-trajectory = ${workdir}/trajectory.yaml
+workdir =    test_run_2
