new restart mechanism for MD as well

--- a/tests/md/md.cfg
+++ b/tests/md/md.cfg
@@ -6,7 +6,6 @@ maxsteps =    50
 walltime =    1
 
 workdir =    test_run
-trajectory = ${workdir}/trajectory.yaml
-logfile =    ${workdir}/md.log
 
-restart_command = python run_md.py
+[restart]
+command = python run_md.py
