--- a/examples/md/md.cfg
+++ b/examples/md/md.cfg
@@ -12,10 +12,9 @@ algorithm =   Verlet
 temperature = 100
 timestep =    1
 maxsteps =    10
-walltime =    60
+walltime =    40
 
 workdir =    test_run
-trajectory = trajectory.yaml
-logfile =    md.log
 
-restart_command = python run_md.py
+[restart]
+command = python run_md.py
