workflows with fireworks working

--- a/examples/workflow_examples/relaxation_phonopy_combined/light_relax.cfg
+++ b/examples/workflow_examples/relaxation_phonopy_combined/light_relax.cfg
@@ -1,13 +1,11 @@
 [calculation_step]
 type = relaxation
 [function_kwargs]
-fmax =       0.005
+fmax =       0.001
 linesearch = False
 maxstep =    0.2
 maxsteps =   20
-
-workdir =    test_run/relax/light
-trajectory = ${workdir}/trajectory.yaml
+workdir = test_run/light_relax
 
 [control]
 compute_analytical_stress = False
@@ -18,10 +16,10 @@ compute_forces =  True
 density =         2
 
 [fw]
-from_db = False
+from_db = True
 fw_name = relaxation_light
 fw_spec = null
 out_spec_atoms = light_relaxed_atoms
 out_spec_calc = light_relaxed_calc
-
-[db_storage]
+in_spec_atoms = kgrid_opt_atoms
+in_spec_calc = kgrid_opt_calc
