--- a/examples/workflow_examples/relaxation_phonopy_combined/tight_relax.cfg
+++ b/examples/workflow_examples/relaxation_phonopy_combined/tight_relax.cfg
@@ -1,13 +1,12 @@
 [calculation_step]
 type = relaxation
 [function_kwargs]
-fmax =       0.005
+fmax =       0.001
 linesearch = False
 maxstep =    0.2
 maxsteps =   20
 
-workdir =    test_run/relax/tight
-trajectory = ${workdir}/trajectory.yaml
+workdir = test_run/tight_relax
 
 [control]
 compute_analytical_stress = False
