workflow config files modified

--- a/examples/workflow_examples/relaxation_phonopy_combined/workflow.cfg
+++ b/examples/workflow_examples/relaxation_phonopy_combined/workflow.cfg
@@ -1,4 +1,4 @@
 # information to build a default control.in
 [workflow]
-step_files = light_relax.cfg,tight_relax.cfg,phonons.cfg
+step_files = k_pt.cfg,light_relax.cfg,tight_relax.cfg,phonons.cfg
 fw = True
