committing changes to fireworks api for draco syncing

--- a/hilde.cfg.template
+++ b/hilde.cfg.template
@@ -53,7 +53,7 @@ sleep_time = 60
 reserve = True
 remote_user = mpcdf_user
 remote_config_dir = /u/${remote_user}/.fireworks
-tasks2queue = [hilde_calc.name]
+tasks2queue = hilde.tasks.fireworks.single_point.calculate,hilde.relaxation.bfgs.relax,hilde.phonopy.workflow.phonopy,hilde.auto_tune_parameters.kgrid.converage_kgrid.converge_kgrid
 gss_auth = True
 remote_host = draco01.mpcdf.mpg.de
 #remote_host = cobra01i.mpcdf.mpg.de
