config file updates

--- a/examples/workflow_examples/relaxation_phonopy_combined/light_relax.cfg
+++ b/examples/workflow_examples/relaxation_phonopy_combined/light_relax.cfg
@@ -23,3 +23,6 @@ out_spec_atoms = light_relaxed_atoms
 out_spec_calc = light_relaxed_calc
 in_spec_atoms = kgrid_opt_atoms
 in_spec_calc = kgrid_opt_calc
+
+[spec_qadapter]
+walltime = 00:05:00
