--- a/examples/workflow_examples/relaxation_phonopy_combined/phonons.cfg
+++ b/examples/workflow_examples/relaxation_phonopy_combined/phonons.cfg
@@ -1,7 +1,7 @@
 [calculation_step]
 type = phonons
 [function_kwargs]
-supercell_matrix = [-1, 1, 1, 1, -1, 1, 1, 1, -1]
+supercell_matrix = [-2, 2, 2, 2, -2, 2, 2, 2, -2]
 workdir =    test_run/phonons
 
 [control]
@@ -14,7 +14,7 @@ compute_forces =  True
 density =         .5
 
 [basisset]
-type = light
+type = tight
 
 [db_storage]
 db_path = /home/purcell/git/hilde/examples/workflow_examples/test.json
@@ -27,3 +27,7 @@ from_db = True
 fw_name = phonopy_test
 fw_spec = null
 mod_spec_add = "calculated_forces"
+
+[spec_qadapter]
+walltime = 00:15:00
+nodes = 2
