--- a/examples/workflow_examples/relaxation_phonopy_combined/tight_relax.cfg
+++ b/examples/workflow_examples/relaxation_phonopy_combined/tight_relax.cfg
@@ -17,7 +17,7 @@ compute_forces =  True
 density =         2
 
 [basisset]
-type = light
+type = tight
 
 [db_storage]
 db_path = /home/purcell/git/hilde/examples/workflow_examples/test.json
@@ -30,3 +30,7 @@ out_spec_atoms = tight_relaxed_atoms
 out_spec_calc = tight_relaxed_calc
 in_spec_atoms = light_relaxed_atoms
 in_spec_calc = light_relaxed_calc
+
+[spec_qadapter]
+walltime = 00:15:00
+
