finger print and fireworks workflow modifications

--- a/examples/workflow_examples/relaxation_phonopy_combined/k_pt.cfg
+++ b/examples/workflow_examples/relaxation_phonopy_combined/k_pt.cfg
@@ -9,7 +9,7 @@ density = 1
 
 [function_kwargs]
 maxsteps =   20
-workdir =    test_run/kgrid
+workdir =    /u/tpurcell/git/hilde/examples/workflow_examples/relaxation_phonopy_combined/test_run/kgrid
 trajectory = ${workdir}/trajectory.yaml
 kpts_density_init = 1
 
