--- a/examples/workflow_examples/relaxation_phonopy_combined/light_relax.cfg
+++ b/examples/workflow_examples/relaxation_phonopy_combined/light_relax.cfg
@@ -5,7 +5,7 @@ fmax =       0.001
 linesearch = False
 maxstep =    0.2
 maxsteps =   20
-workdir = test_run/light_relax
+workdir = /u/tpurcell/git/hilde/examples/workflow_examples/relaxation_phonopy_combined/test_run/light_relax
 
 [control]
 compute_analytical_stress = False
