--- a/examples/workflow_examples/relaxation_phonopy_combined/tight_relax.cfg
+++ b/examples/workflow_examples/relaxation_phonopy_combined/tight_relax.cfg
@@ -6,7 +6,7 @@ linesearch = False
 maxstep =    0.2
 maxsteps =   20
 
-workdir = test_run/tight_relax
+workdir = /u/tpurcell/git/hilde/examples/workflow_examples/relaxation_phonopy_combined/test_run/tight_relax
 
 [control]
 compute_analytical_stress = False
@@ -19,8 +19,6 @@ density =         2
 [basisset]
 type = tight
 
-[db_storage]
-db_path = /home/purcell/git/hilde/examples/workflow_examples/test.json
 
 [fw]
 from_db = True
