--- a/examples/workflow_examples/relaxation_phonopy_combined/phonons.cfg
+++ b/examples/workflow_examples/relaxation_phonopy_combined/phonons.cfg
@@ -2,7 +2,7 @@
 type = phonons
 [function_kwargs]
 supercell_matrix = [-2, 2, 2, 2, -2, 2, 2, 2, -2]
-workdir =    test_run/phonons
+workdir =    /u/tpurcell/git/hilde/examples/workflow_examples/relaxation_phonopy_combined/test_run/phonons
 
 [control]
 compute_analytical_stress = null
@@ -17,7 +17,6 @@ density =         .5
 type = tight
 
 [db_storage]
-db_path = /home/purcell/git/hilde/examples/workflow_examples/test.json
 
 [fw]
 serial = False
