added a default hilde.cfg file to install somewhere, modified cfg files for fireworks relax/phonopy. claunch_hilde uses default settings

--- a/examples/workflow_examples/relaxation_phonopy_combined/k_pt.cfg
+++ b/examples/workflow_examples/relaxation_phonopy_combined/k_pt.cfg
@@ -12,13 +12,20 @@ maxsteps =   20
 workdir =    /u/tpurcell/git/hilde/examples/workflow_examples/relaxation_phonopy_combined/test_run/kgrid
 trajectory = ${workdir}/trajectory.yaml
 kpts_density_init = 1
+dfunc_min = 1e-2
+even = True
+unit_cell = True
+# trajectory = "kpt_trajectory.yaml"
+# logfile = "kpoint_conv.log"
+# socketio_port = None
+# walltime = 1800
 
 [fw]
-fw_name = relaxation_test
+fw_name = kgrid_opt
 fw_spec = null
 out_spec_k_den = kgrid
 out_spec_atoms = kgrid_opt_atoms
 out_spec_calc = kgrid_opt_calc
 
-[spec_qadapter]
+[fw_spec_qadapter]
 walltime = 00:05:00
