--- a/examples/workflow_examples/relaxation_phonopy_combined/phonons.cfg
+++ b/examples/workflow_examples/relaxation_phonopy_combined/phonons.cfg
@@ -1,8 +1,9 @@
 [calculation_step]
 type = phonons
 [function_kwargs]
-supercell_matrix = [-2, 2, 2, 2, -2, 2, 2, 2, -2]
+supercell_matrix = [-1, 1, 1, 1, -1, 1, 1, 1, -1]
 workdir =    /u/tpurcell/git/hilde/examples/workflow_examples/relaxation_phonopy_combined/test_run/phonons
+analysis_workdir = /home/purcell/git/hilde/examples/workflow_examples/relaxation_phonopy_combined/test_run/phonons
 
 [control]
 compute_analytical_stress = null
@@ -17,6 +18,7 @@ density =         .5
 type = tight
 
 [db_storage]
+name =          postgresql://hilde:hilde@130.183.206.193:5432/phonopy_db
 
 [fw]
 serial = False
@@ -27,6 +29,6 @@ fw_name = phonopy_test
 fw_spec = null
 mod_spec_add = "calculated_forces"
 
-[spec_qadapter]
-walltime = 00:15:00
-nodes = 2
+[fw_spec_qadapter]
+walltime = 00:10:00
+nodes = 5
