--- a/examples/workflow_examples/relaxation_phonopy_combined/tight_relax.cfg
+++ b/examples/workflow_examples/relaxation_phonopy_combined/tight_relax.cfg
@@ -29,6 +29,7 @@ out_spec_calc = tight_relaxed_calc
 in_spec_atoms = light_relaxed_atoms
 in_spec_calc = light_relaxed_calc
 
-[spec_qadapter]
-walltime = 00:15:00
+[fw_spec_qadapter]
+nodes = 5
+walltime = 00:10:00
 
