--- a/hilde.cfg.template
+++ b/hilde.cfg.template
@@ -37,7 +37,8 @@ email = you@something.com
 [database]
  location =      ${common:home_dir}/examples/phonon_db
  name =          test.db
-
+ db_path =       ${location}/${name}
+#db_path =       postgresql://user:passwd@host:port/db_name
 [watchdog]
 # 1800s = 30 minutes
 # 14400 = 4h
