--- a/examples/workflow_examples/relaxation_phonopy_combined/light_relax.cfg
+++ b/examples/workflow_examples/relaxation_phonopy_combined/light_relax.cfg
@@ -24,5 +24,5 @@ out_spec_calc = light_relaxed_calc
 in_spec_atoms = kgrid_opt_atoms
 in_spec_calc = kgrid_opt_calc
 
-[spec_qadapter]
+[fw_spec_qadapter]
 walltime = 00:05:00
