update MD according to new scheme

--- a/examples/md/settings.in
+++ b/examples/md/settings.in
@@ -1,11 +1,17 @@
 # config file to control phonopy workflow
+[geometry]
+file = geometry.in
+
 [control]
-sc_accuracy_rho = 1e-4
+xc =               pw-lda
+sc_accuracy_rho =  1e-4
 charge_mix_param = 0.5
-compute_forces =  True
 
 [control_kpt]
 density =         0.5
+
+[basisset]
+type = light
 
 [md]
 algorithm =   Verlet
