--- a/examples/phonopy/minimal_input/settings.in
+++ b/examples/phonopy/minimal_input/settings.in
@@ -3,18 +3,10 @@ file:                geometry.in
 
 [control]
 xc:                  pw-lda
-sc_accuracy_rho:     0.0001
-charge_mix_param:    0.5
-output_level:        MD_light
-
-[control_kpt]
-density:             .5
+k_grid:              [4, 4, 4]
 
 [basisset]
 type:                light
 
 [phonopy]
 supercell_matrix:    [-1, 1, 1, 1, -1, 1, 1, 1, -1]
-
-[restart]
-command:             python run_phonopy.py
