--- a/examples/phonopy/settings.in
+++ b/examples/phonopy/settings.in
@@ -14,6 +14,9 @@ density =         .5
 [basisset]
 type = light
 
+[socketio]
+port = 12345
+
 [phonopy]
 supercell_matrix = [-1, 1, 1, 1, -1, 1, 1, 1, -1]
 
