--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ all_tests:
 #    - python $CI_PROJECT_DIR/examples/hiphive/hiphive_al.py
     - python $CI_PROJECT_DIR/examples/phonon_db/phonon_db.py
     - python $CI_PROJECT_DIR/examples/phonon_db/phonon_db.py
-#    - python $CI_PROJECT_DIR/tests/fireworks/fireworks_test.py
+    - python $CI_PROJECT_DIR/tests/fireworks/fireworks_test.py
     - python $CI_PROJECT_DIR/examples/material_fingerprints/material_fingerprints.py
 
 # devel:
