--- a/hilde.cfg.template
+++ b/hilde.cfg.template
@@ -32,6 +32,6 @@ reserve = True
 remote_config_dir = ["/u/${remote_user}/.fireworks"]
 tasks2queue = ["hilde.tasks.fireworks.single_point.calculate", "hilde.relaxation.bfgs.relax", "hilde.phonopy.workflow.phonopy", "hilde.auto_tune_parameters.k_grid.converge_kgrid.converge_kgrid", "hilde.tasks.calculate.calculate" ]
 gss_auth = True
-remote_host = draco01.mpcdf.mpg.de
+remote_host = ["draco01.mpcdf.mpg.de"]
 #remote_host = cobra01i.mpcdf.mpg.de
 
